--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,38 @@
-version: '3'
+version: '3.4'
+
+x-base:
+  &base
+  image: sentry:9.1.2
+  restart: always
+  command: sentry run web
+  volumes:
+    - ./data/app:/var/lib/sentry/files
+  logging:
+    options:
+      max-size: "256M"
+      max-file: "5"
+  depends_on:
+    - redis
+    - postgres
+  env_file:
+    - .env
+
 services:
   web:
-    image: ${SENTRY_IMAGE}
-    restart: always
+    <<: *base
     ports:
       - 80:9000
       - 443:9000
     command: sentry run web
-    volumes:
-      - ./data/app:/var/lib/sentry/files
-    depends_on:
-      - redis
-      - postgres
-    env_file:
-      - .env
   worker:
-    image: ${SENTRY_IMAGE}
-    restart: always
+    <<: *base
     command: sentry run worker -l info -c 4
-    depends_on:
-      - redis
-      - postgres
-    env_file:
-      - .env
   beat:
-    image: ${SENTRY_IMAGE}
-    restart: always
+    <<: *base
     command: sentry run cron -l info
-    depends_on:
-      - redis
-      - postgres
-    env_file:
-      - .env
   test:
-    image: ${SENTRY_IMAGE}
-    restart: always
+    <<: *base
     command: tail -F /tmp/xxx.log
-    depends_on:
-      - redis
-      - postgres
-    env_file:
-      - .env
   redis:
     image: redis:latest
     restart: always
